# Almadrasa-course-codes

./: README.md
introduction to Data analytics/: data.csv  pyproject.toml
introduction to Data analytics/Data usecase/: flight datasets.ipynb
introduction to Data analytics/Introduction to visualization frameworks/: data visualization.ipynb
introduction to Data analytics/Module 2 - Exploratory data analysis and data wrangling/: Intro_to_pandas.ipynb  data_inspection_flowchart.md  data_wrangling_car_dataset.ipynb  data_wrangling_flight_dataset.ipynb  pandas intro.py  wrangled_data.csv
introduction to Data analytics/Module 2 - Exploratory data analysis and data wrangling/data/: admits.json
introduction to Data analytics/Module 2 - Exploratory data analysis and data wrangling/profiling reports/: profile_airports.html  profile_cancelled_diverted.html  your_report.html
introduction to Data analytics/Module 3 - Data Analysis/: Full analysis 2.ipynb  Untitled-1.py  analysis 1.py  analysis 2.py  fr-analyse-du-dataset-us-flight-2023.ipynb  full_analysis.ipynb  us-2023-civil-aviation-analysis.ipynb
introduction to Data analytics/Module 5 - Data visulaization/: data_wrangling_flight_dataset.ipynb  matplot lib viz.ipynb  pandas_viz.ipynb
introduction to Data analytics/Module 5 - Data visulaization/Heat map/: heat_map.ipynb
introduction to Data analytics/all processing/: Data_inspection.ipynb  profile_airports.html  profile_cancelled_diverted.html
introduction to Data analytics/helper code/: What is Correlation?.md  viszualizations.ipynb
introduction to Data analytics/module 1/: Data_inspection.ipynb  Intro_to_pandas.ipynb
introduction to Data analytics/module 4 - Introduction to visualization frameworks/: matplotlib_tutorial.ipynb  plotly_tutorial.ipynb  seaborn_tutorial.ipynb
introduction to Data analytics/pandas/: pandas.ipynb  pandas_sota.ipynb
introduction to Data analytics/pandas reference code/: pandas_sota.ipynb
introduction to Data analytics/pandas/drafts/: your_report.html
(+24 files in other folders)
