[tool.poetry]
name = "introduction to data analytics"
version = "0.1.0"
description = "this is the env for data analytics course"
authors = ["Khaled-Abdelhamid <khaledusama1998@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.2.2"
ydata-profiling = "^4.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
