[tool.poetry]
name = "introduction to data analytics"
version = "0.1.0"
description = "this is the env for data analytics course"
authors = ["Khaled-Abdelhamid <khaledusama1998@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.2.2"
pylance = "^0.10.18"
numpy = "^1.26.4"
openpyxl = "^3.1.3"
ipywidgets = "^8.1.3"
folium = "^0.17.0"
nbformat = "^5.10.4"
scikit-learn = "^1.5.0"
joypy = "^0.2.6"
opencv-python = "^4.10.0.84"
matplotlib = "^3.8.0"
seaborn = "^0.13.2"
plotly = "^5.22.0"
ydata-profiling = "^4.8.3"
plotnine = "^0.13.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
notebook = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
